--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "npm-run-all build --parallel \"dev:*\"",
     "start": "cross-env NODE_ENV=production npm run wrangler",
     "typecheck": "tsc",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
+    "format": "prettier --write .",
     "wrangler": "wrangler pages dev ./public"
   },
   "dependencies": {
@@ -15,6 +17,8 @@
     "@remix-run/cloudflare-pages": "^1.14.3",
     "@remix-run/react": "^1.14.3",
     "cross-env": "^7.0.3",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -26,12 +30,21 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.8.4",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.8.4",
     "wrangler": "^2.2.1"
   },
   "engines": {
     "node": ">=16.13"
-  }
+  },
+  "prettier": {},
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build",
+    "/functions"
+  ]
 }
