--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "framer-motion": "^10.10.0",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
